Orthographic view is blurry - rB36814ddc94b5 regression #85726

Closed
opened 2021-02-17 08:00:44 +01:00 by Alaska · 16 comments
Member

System Information:
Operating system: Linux-5.10.0-3-amd64-x86_64 64 Bits
Graphics card: GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39

Blender Version:
Broken version: 2.93.0 Alpha, branch: master, commit date: 2021-02-17 06:07, hash: 17dddc9417
Worked: Prior to 2.93 36814ddc94

Short description of error:
When in orthographic mode, the 3D viewport appears "blurrier" than usual when compared to non-orthographic mode or older versions of Blender. Here's a few screenshots:

Old.jpg Latest.jpg Old (Enlarged).jpg Latest (Enlarged).jpg
Prior to 36814ddc94 Current Master Prior to 36814ddc94 (enlarged) Current Master (enlarged)

Exact steps for others to reproduce the error:

  1. Open a scene with a model that's at least semi-complex, I used a scene with Suzanne in it.
  2. Enter orthographic mode View -> Perspective/Orthographic, or Numpad 5.
  3. Observe how the scene appears blurry when compared to older versions. Changing the anti-aliasing option in User Preferences -> Viewport -> Viewport Anti-aliasing can either make the effect worse or better. Decreasing anti-aliasing sample count makes the issue better while increasing the anti-aliasing sample count makes it worse. This is inline with the issue being related to a change in the TAA used by the workbench render engine introduced in 36814ddc94.

Note: I am using a 1920x1080 monitor. I assume this issue is less noticeable on higher resolution monitors.

**System Information:** Operating system: Linux-5.10.0-3-amd64-x86_64 64 Bits Graphics card: GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39 **Blender Version:** Broken version: 2.93.0 Alpha, branch: master, commit date: 2021-02-17 06:07, hash: `17dddc9417` Worked: Prior to 2.93 36814ddc94 **Short description of error:** When in orthographic mode, the 3D viewport appears "blurrier" than usual when compared to non-orthographic mode or older versions of Blender. Here's a few screenshots: |![Old.jpg](https://archive.blender.org/developer/F9811401/Old.jpg)|![Latest.jpg](https://archive.blender.org/developer/F9811399/Latest.jpg)|![Old (Enlarged).jpg](https://archive.blender.org/developer/F9811404/Old__Enlarged_.jpg)|![Latest (Enlarged).jpg](https://archive.blender.org/developer/F9811406/Latest__Enlarged_.jpg)| | -- | -- | -- | -- | |Prior to 36814ddc94| Current Master|Prior to 36814ddc94 (enlarged)|Current Master (enlarged)| **Exact steps for others to reproduce the error:** 1. Open a scene with a model that's at least semi-complex, I used a scene with Suzanne in it. 2. Enter orthographic mode `View -> Perspective/Orthographic`, or `Numpad 5`. 3. Observe how the scene appears blurry when compared to older versions. Changing the anti-aliasing option in `User Preferences -> Viewport -> Viewport Anti-aliasing` can either make the effect worse or better. Decreasing anti-aliasing sample count makes the issue better while increasing the anti-aliasing sample count makes it worse. This is inline with the issue being related to a change in the TAA used by the workbench render engine introduced in 36814ddc94. Note: I am using a 1920x1080 monitor. I assume this issue is less noticeable on higher resolution monitors.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

#85941 was marked as duplicate of this issue

#85941 was marked as duplicate of this issue

#85782 was marked as duplicate of this issue

#85782 was marked as duplicate of this issue

#85775 was marked as duplicate of this issue

#85775 was marked as duplicate of this issue
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Author
Member

As pointed out in the report, bisecting points to 36814ddc94 as the cause.

CC @Jeroen-Bakker

As pointed out in the report, bisecting points to 36814ddc94 as the cause. CC @Jeroen-Bakker
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Jeroen Bakker was assigned by Dalai Felinto 2021-02-17 10:59:01 +01:00

I can reproduce as well on:

Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04```

Assigning to Jeroen since it was recent from one of his commits.
I can reproduce as well on: ```Operating system: Linux-5.8.0-41-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04``` Assigning to Jeroen since it was recent from one of his commits.
Jeroen Bakker removed their assignment 2021-02-17 12:14:23 +01:00
Clément Foucault was assigned by Jeroen Bakker 2021-02-17 12:14:23 +01:00
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Added subscribers: @Vyach, @lichtwerk

Added subscribers: @Vyach, @lichtwerk
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Author
Member

Added subscriber: @newsoft

Added subscriber: @newsoft

Added subscriber: @SteffenD

Added subscriber: @SteffenD

This issue was referenced by bb2af40ec7

This issue was referenced by bb2af40ec7dd9a0c41991bc2faaf6eb3f0618016

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85726
No description provided.