source/blender/draw/engines/workbench/workbench_effect_antialiasing.c
@@ -285,7 +285,7 @@ static void workbench_antialiasing_weights_get(const float offset[2],
   for (int x = -1; x <= 1; x++) {
     for (int y = -1; y <= 1; y++, i++) {
       float sample_co[2] = {x, y};
-      add_v2_v2(sample_co, offset);
+      sub_v2_v2(sample_co, offset);
       float r = len_v2(sample_co);
       /* fclem: is radial distance ok here? */
       float weight = filter_blackman_harris(r, filter_width);
